bankaccountdto usage, fix fetch transactions and listAccounts