@@ -22,46 +22,49 @@ import java.util.stream.Collectors;
 @Slf4j
 @RequiredArgsConstructor
 public class BankConnectionService {
-
     private final GoCardlessIntegrationService goCardlessIntegrationService;
     private final BankConnectionRepository bankConnectionRepository;
     private final TransactionService transactionService;
+    private final TransactionMapper transactionMapper;
 
     public RequisitionDto createRequisition(RequisitionRequestDto requestDto) {
         return goCardlessIntegrationService.createRequisition(requestDto);
     }
 
-    public List<BankConnectionDto> listAccounts(String requisitionId) {
+    public List<BankAccountDto> listAccounts(String requisitionId) {
         RequisitionDto requisition = goCardlessIntegrationService.getRequisition(requisitionId);
-        List<BankConnectionDto> dtos = new ArrayList<>();
+        List<BankAccountDto> accounts = new ArrayList<>();
         if (requisition.getAccounts() != null) {
             for (String accountId : requisition.getAccounts()) {
-                dtos.add(BankConnectionDto.builder()
-                        .externalAccountId(accountId)
-                        .accountName("Account " + accountId)
-                        .institutionId("MappedInstitutionId")
-                        .institutionName("MappedInstitutionName")
+                dtos.add(BankAccountDto.builder()
+                        .accountId(accountId)
+                        .iban("Not yet known")
+                        .transactions(new ArrayList<TransactionDto())
                         .build());
             }
         }
+
         return dtos;
     }
 
-    public List<TransactionDto> syncTransactions(Long BankConnectionId, String accessTokenHeader) {
-        BankConnection BankConnection = bankConnectionRepository.findById(BankConnectionId)
-                .orElseThrow(() -> new ResourceNotFoundException("Bank account not found"));
-        List<Transaction> transactions = goCardlessIntegrationService.fetchTransactions(
-                BankConnection.getAccountId(), accessTokenHeader);
+    public List<TransactionDto> syncTransactions(String userEmail, String requisitionId) {
+        RequisitionDto requisition = goCardlessIntegrationService.getRequisition(requisitionId);
+        List<BankAccount> accounts = listAccounts(requisitionId)''
+        UserDto user= userService.getByEmail(userEMail);
+
+        BankConnectionDto bankConnection = BankConnectionDto.builder()
+                        .requisitionId(requisition.getId())
+                        .reference(requisition.getReference()
+                        .institutionId(requisition.getInstitutionID())
+                        .institutionName("nz oshte")
+                        .accounts(accounts)
+                        .build()) 
+        List<TransactionDto> transactions = goCardlessIntegrationService.fetchTransactions(accounts);
+        transactions.foreach(transaction -> transaction.bankConnection = bankConnection);
+        bankConnection.setTransactions(transactions);
+
         List<Transaction> savedTransactions = transactionService.saveTransactions(transactions);
-        return savedTransactions.stream().map(txn ->
-                TransactionDto.builder()
-                        .id(txn.getId())
-                        .amount(txn.getAmount())
-                        .currency(txn.getCurrency())
-                        .transactionDate(txn.getTransactionDate())
-                        .description(txn.getDescription())
-                        .type(txn.getType())
-                        .build()
-        ).collect(Collectors.toList());
+        user.bankConnections.add(bankConnection);
+        return savedTransactions.stream().map(transactionMapper::toDTO).toList();
     }
 }
